Added dictionaries logic